# secure-code-review

./: README.md
scr101/: docker-compose.yml  dockerfile  requirements.txt  scr101.db  scr101.py
scrpy01/: Dockerfile  README.md  app.py  docker-compose.yml  init.sql  pyproject.toml
