[tool.poetry]
name = "scrpy01"
version = "1.0.0"
description = "Hardcoded Credentials"
authors = ["Ande <andesec1@gmail.com>"]
license = "LGPL 3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.8"
Flask = "~3.1.0"
mysql-connector-python= "~9.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
